[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/PressStart2P.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Character/Jumping_(16x16).png" type="Texture" id=2]
[ext_resource path="res://Assets/Character/JumpPin(16x17).png" type="Texture" id=3]
[ext_resource path="res://Assets/Telas/Tela_Jogo.png" type="Texture" id=4]
[ext_resource path="res://Assets/Character/JumpPet(16x16).png" type="Texture" id=5]
[ext_resource path="res://Scripts/SelectCharacter.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="TelaJogo" type="Sprite" parent="."]
position = Vector2( 164, 99 )
scale = Vector2( 0.044, 0.044 )
texture = ExtResource( 4 )

[node name="Selection" type="VBoxContainer" parent="."]
margin_left = 60.0
margin_top = 59.0
margin_right = 184.0
margin_bottom = 133.0

[node name="Pepe" type="Button" parent="Selection"]
margin_right = 124.0
margin_bottom = 22.0
custom_colors/font_color_focus = Color( 0.992157, 0.403922, 0.580392, 1 )
custom_colors/font_color_hover = Color( 0.992157, 0.403922, 0.580392, 1 )
custom_colors/font_color_pressed = Color( 0.517647, 0.807843, 0.666667, 1 )
custom_fonts/font = SubResource( 1 )
text = "Pepe"

[node name="Petunia" type="Button" parent="Selection"]
margin_top = 26.0
margin_right = 124.0
margin_bottom = 48.0
custom_colors/font_color_focus = Color( 0.992157, 0.403922, 0.580392, 1 )
custom_colors/font_color_hover = Color( 0.992157, 0.403922, 0.580392, 1 )
custom_colors/font_color_pressed = Color( 0.517647, 0.807843, 0.666667, 1 )
custom_fonts/font = SubResource( 1 )
text = "Pet√∫nia"

[node name="Pinho" type="Button" parent="Selection"]
margin_top = 52.0
margin_right = 124.0
margin_bottom = 74.0
custom_colors/font_color_focus = Color( 0.992157, 0.403922, 0.580392, 1 )
custom_colors/font_color_hover = Color( 0.992157, 0.403922, 0.580392, 1 )
custom_colors/font_color_pressed = Color( 0.517647, 0.807843, 0.666667, 1 )
custom_fonts/font = SubResource( 1 )
text = "Pinho"

[node name="JumpPet(16X16)" type="Sprite" parent="."]
position = Vector2( 245, 87 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="JumpPin(16X17)2" type="Sprite" parent="."]
position = Vector2( 218, 132 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Jumping(16X16)" type="Sprite" parent="."]
position = Vector2( 220, 50 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[connection signal="pressed" from="Selection/Pepe" to="." method="_on_Pepe_pressed"]
[connection signal="pressed" from="Selection/Petunia" to="." method="_on_Petunia_pressed"]
[connection signal="pressed" from="Selection/Pinho" to="." method="_on_Pinho_pressed"]
